feat: compiled stuff